version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/ChartXAxis.rst.txt
.. vale off



:class:`ChartXAxis`
===================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.ChartXAxis

   Bases: :py:obj:`object`


   
   ChartXAxis class.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ChartXAxis

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ComponentIndex`
            - Gets or sets the component index for the chart.
          * - :py:attr:`~ObjectSelection`
            - Gets or sets the object being used to control the X Axis. Setting to None returns to common independent variable.







Property detail
---------------
.. py:property:: ComponentIndex
   :type: Optional[int]

   
   Gets or sets the component index for the chart.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectSelection
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets or sets the object being used to control the X Axis. Setting to None returns to common independent variable.
















   ..
       !! processed by numpydoc !!







.. vale on