version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/ChartXAxis.rst.txt
.. vale off



:class:`ChartXAxis`
===================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.ChartXAxis

   Bases: :py:obj:`object`



.. py:currentmodule:: ChartXAxis

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ComponentIndex`
            - Gets or sets the component index for the chart.
          * - :py:attr:`~ObjectSelection`
            - Gets or sets the object being used to control the X Axis. Setting to None returns to common independent variable.







Property detail
---------------
.. py:property:: ComponentIndex
   :type: Optional[int]


   
   Gets or sets the component index for the chart.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectSelection
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Gets or sets the object being used to control the X Axis. Setting to None returns to common independent variable.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on